# aoc

c/: .clang-format  CMakeLists.txt  run_all.sh
c/2015/src/: 2015_day_1.c  2015_day_10.c  2015_day_11.c  2015_day_12.c  2015_day_13.c  2015_day_14.c  2015_day_15.c  2015_day_2.c  2015_day_3.c  2015_day_4.c  2015_day_5.c  2015_day_6.c  2015_day_7.c  2015_day_8.c  2015_day_9.c  day_1.c  day_2.c
c/common/include/: comb.h  fileutils.h  list.h  min_max.h  misc.h  mystring.h  stringset.h  timer.h
c/common/src/: comb.c  fileutils.c  list.c  min_max.c  misc.c  mystring.c  stringset.c
